# onika

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake_cuda.yml  cmake_gcc.yml  cmake_hip.yml
apps/: onika-exec.cpp
cmake/: AddRegressionTestDir.cmake  DebugTests.cmake  GenerateBenchmarkSOATL.cmake  OnikaPlugin.cmake  RunCommand.cmake
contribs/: CMakeLists.txt
contribs/egl/: CMakeLists.txt  README.txt  egl_check_cu_graphics.cpp  egl_create_shader_program.cpp  egl_create_surface.cpp  egl_end_frame.cpp  egl_init.cpp  egl_start_frame.cpp
contribs/egl/data/: egl_test.msp
contribs/egl_renderer/: egl_check_cu_graphics.cpp  egl_create_camera.cpp  egl_create_shader_program.cpp  egl_create_surface.cpp  egl_create_vertex_buffer.cpp  egl_draw.cpp  egl_handle_events.cpp  egl_handle_events.cxx  egl_make_current.cpp  egl_simple_vertex_generator.cpp  egl_write_frame.cpp
data/config/: main-config.msp  print_value.msp
data/exemples/: concurrent_block_parallel.msp
doc/: build-examples.txt  parallel_execution_pipeline.odp  tuto_docker_rocm.md  yaml-build.txt
exemples/: plugins.db  print_loop.msp  print_loop_argv.py  pyonika_dryrun_test_import_pyonika.py  pyonika_execute_user_specified_msp_file.py  pyonika_reproduce_print_loop_case.py  pyonika_run_main_config.py
exemples/coupling/: CMakeLists.txt
include/onika/: bit_rotl.h  cpp_utils.h  deprecated.h  flat_tuple.h  flat_tuple.hxx  hash_utils.h  lambda_tools.h  log.h  oarray.h  plugin.h  string_utils.h  thread.h  type_utils.h  value_streamer.h
include/onika/app/: api.h  config_struct.h  default_app_config.h
include/onika/cuda/: cuda.h  cuda_context.h  cuda_math.h  input_array_span.h  ro_shallow_copy.h  stl_adaptors.h  uninitialized_place_holder.h  unitialized_place_holder.h
include/onika/dag/: dot.h
include/onika/extras/: array2d.h  block_parallel_value_add_functor.h
include/onika/math/: basic_types_constructors.h  basic_types_def.h  basic_types_operators.h  bit_rotl.h  matrix4d.h
include/onika/memory/: allocator.h  simd.h
include/onika/mpi/: data_types.h  xs_data_move_impl.h  xs_data_move_internal_types.h
include/onika/omp/: version.h
include/onika/parallel/: block_parallel_for.h  block_parallel_for_adapter.h  block_parallel_for_functor.h  constants.h  parallel_data_access.h  parallel_execution_context.h  parallel_execution_context_allocator.h  parallel_execution_debug.h  parallel_execution_operators.h  parallel_execution_queue.h  parallel_execution_space.h  parallel_execution_stream.h  parallel_for.h  stream_utils.h
include/onika/physics/: constants.h  units.h
include/onika/scg/: operator.h  operator_factory.h  operator_set_from_regex.h  operator_slot.h  operator_slot_base.h
include/onika/soatl/: field_combiner.h  field_id_tuple_utils.h  field_tuple.h
include/onika/yaml/: yaml_utils.h
plugins/: CMakeLists.txt
plugins/onikaBasicTutorial/: default_value_from_constructor_args.cpp
plugins/onikaParallelTutorial/: array2d.h  async_block_parallel.cu  automatic_concurrent_parallel.cu  block_parallel_value_add_functor.h  concurrent_block_parallel.cu  hybrid_async_block_parallel.cu  parallel_for_3d_benchmark.cu  parallel_for_benchmark.cu  synchronous_block_parallel.cu
plugins/onikaPerfMon/: memory_stats.cpp  parallel_for_3d_benchmark.cu  parallel_for_benchmark.cu
plugins/onikaTools/: memory_stats.cpp
python/: CMakeLists.txt  README.md  bind_app.cpp  bind_app.h  bind_factory.cpp  bind_factory.h  bind_scg.cpp  bind_scg.h  bind_soatl.cpp  bind_soatl.h  module.cpp  yaml_conv.h
python/exemples/: pyonika_make_operator_usage.py  pyonika_read_slot_values.py  pyonika_run_simulation.py
src/: units.cpp
src/core/: api.cpp  log.cpp  plugin.cpp  string_utils.cpp
src/cuda/: allocator.cpp  cuda_context.cpp
src/mpi/: xs_data_move.cpp
src/parallel/: block_parallel_for_adapter.cpp  parallel_data_access.cpp  parallel_execution_context.cpp  parallel_execution_context_allocator.cpp  parallel_execution_debug.cpp  parallel_execution_queue.cpp  thread.cpp
src/physics/: units.cpp
src/scg/: batch.cpp  comm_btree.cpp  finalize_cuda.cpp  init_cuda.cpp  message.cpp  mpi_comm_world.cpp  operator.cpp  operator_factory.cpp  operator_memory_stats.cpp  unit_system.cpp
src/scg-builtin-components/: batch.cpp  boolean_and.cpp  boolean_or.cpp  boolean_set.cpp  comm_btree.cpp  file_exists.cpp  finalize_cuda.cpp  global.cpp  init_cuda.cpp  input_value.cpp  message.cpp  mpi_comm_world.cpp  next_time_step.cpp  nop.cpp  nth_timestep.cpp  physical_time_interval.cpp  print_value.cpp  sim_continue.cpp  unit_system.cpp  value_greater_than.cpp
src/trace/: make_stencil_dag.cpp  make_stencil_dag_legacy.cpp
src/yaml/: yaml_utils.cpp
tests/: benchmark.cpp  gpu_reduce_min_fp64.cu  gpu_uvm_benchmark.cu  omp_tasks.cpp  parallel_queue_lane.cpp  parallel_queue_lane.cu  soatlserializetest.cpp  soatupletest.cpp
